--- a/css/style.css
+++ b/css/style.css
@@ -8,21 +8,25 @@ old-lavender: #70566dff;
 dark-purple: #38273bff; 
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
 
 /* General */
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Nanum Gothic', sans-serif;
+    font-family: 'Comic Neue', cursive;
 }
 
 h1 {
-    color: white;
-    background-color: #dabedcff;
-    display: flex;
-    justify-content: center;
+    color: #38273bff;
+    background-image: linear-gradient(#dabedcff, white);
+    height: 50px;
+    padding: 15px;
+    text-align: center;
 }
 
 ul {
@@ -57,7 +61,7 @@ ul {
     padding: 2rem;
 }
 
-.menu li:hover{
+.menu li:hover {
     background-color: rgb(65, 1, 27);
     cursor: pointer;
 }
@@ -65,6 +69,7 @@ ul {
 .menu a {
     color: white;
     text-decoration: none;
+    padding: 25px;
 }
 
 .menu--activo {
@@ -88,28 +93,29 @@ ul {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 50%);
     padding: 2rem;
-    grid-template-areas: 
-    "hilos botones elasticos"
-    "cintas lanas cierres"
+    grid-template-areas:
+        "hilos botones elasticos"
+        "cintas lanas cierres"
     ;
 }
 
-.titulo__cat{
+.titulo__cat {
     position: relative;
     top: 65px;
     font-weight: bold;
     color: white;
     font-size: 25px;
     left: 20px;
+    z-index: 2;
 }
 
 .hilos {
     grid-area: hilos;
 }
 
-.hilos img{
+.hilos img {
     width: 100%;
-    height: 100%;
+    height: 50%;
     object-fit: cover;
 }
 
@@ -118,61 +124,77 @@ ul {
 
 }
 
-.botones img{
-    width: 100%;
-    height: 100%;
+.botones img {
+    width: 456px;
+    height: 50%;
     object-fit: cover;
-    }
+}
 
 .elasticos {
     grid-area: elasticos;
 
 }
 
-.elasticos img{
+.elasticos img {
     width: 100%;
-    height: 100%;
+    height: 50%;
     object-fit: cover;
-    }
+}
 
 .cintas {
     grid-area: cintas;
 }
 
-.cintas img{
+.cintas img {
     width: 100%;
-    height: 100%;
+    height: 50%;
     object-fit: cover;
-    }
+}
 
 .lanas {
     grid-area: lanas;
 }
 
-.lanas img{
+.lanas img {
     width: 100%;
-    height: 100%;
+    height: 50%;
     object-fit: cover;
-    }
+}
 
 .cierres {
     grid-area: cierres;
 }
 
-.cierres img{
+.cierres img {
     width: 100%;
-    height: 100%;
+    height: 50%;
     object-fit: cover;
-    }
+}
 
- .categorias__main_grid li{
+.categorias__main_grid li {
     justify-self: center;
-    margin: 25px;
-} 
+    width: 450px;
+    height: 470px;
+}
+
+.categorias__main_grid a {
+    text-decoration: none;
+}
+
+.categorias__main_grid p {
+    font-family: 'Pacifico', cursive;
+    letter-spacing: .80px;
+    text-decoration: none;
+}
+
+
+.animate__pulse:hover {
+    transition: 5s;
+}
 
 /* Productos */
 
-.productos__grid h2{
+.productos__grid h2 {
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
@@ -182,23 +204,26 @@ ul {
     text-align: center;
 }
 
-.producto div{
+.producto div {
     margin-left: 78px;
     margin-right: 78px;
-    margin:auto;
+    margin: auto;
 }
 
 .carrito__2 {
     color: white;
     background-color: #72002eff;
     width: 250px;
+    border-radius: 8px;
 }
 
-.producto img{
+.producto img {
     width: 250px;
+    height: 500px;
+    object-fit: cover;
 }
 
-.productos__grid{
+.productos__grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
