--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,8 @@ dark-purple: #38273bff;
 }
 
 h1 {
-    color: #38273bff;
-    background-image: linear-gradient(#dabedcff, white);
+    color: white;
+    background-image: linear-gradient(#72002eff, white);
     height: 50px;
     padding: 15px;
     text-align: center;
@@ -188,8 +188,24 @@ ul {
 }
 
 
-.animate__pulse:hover {
-    transition: 5s;
+@keyframes pulse {
+    0% {
+        transform: scale(.85);
+    }
+
+    70% {
+        transform: scale(1);
+
+    }
+
+    100% {
+        transform: scale(1);
+
+    }
+}
+
+.pulse__button:hover {
+    animation: pulse 2s;
 }
 
 /* Productos */
