--- a/css/style.css
+++ b/css/style.css
@@ -210,11 +210,6 @@ ul {
 
 /* Productos */
 
-.productos__grid h2 {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-}
-
 .producto {
     width: 33vw;
     text-align: center;
@@ -242,6 +237,11 @@ ul {
 .productos__grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+}
+
+.productos__grid h2 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 /* Main Como Comprar */
@@ -289,3 +289,69 @@ ul {
 .map {
     margin: 100px;
 }
+
+/* Mobile last - Media Queries*/
+
+/* Dispositivo mediano */
+
+@media (max-width: 768px) {
+
+    h1 {
+        width: 768px
+    }
+
+    .header {
+        width: 768px;
+    }
+
+    .menu {
+      flex-direction: column;
+      font-size: 17px;
+    } 
+
+    .main__img {
+        width: 768px;
+        object-fit_: contain;
+    }
+
+    .categorias__main_grid {
+        width: 768px;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(1, 15%);
+        padding: 2rem;
+        grid-template-areas:
+            "hilos"
+            "botones"
+            "elasticos"
+            "cintas"
+            "lanas"
+            "cierres";
+    }
+
+    @keyframes pulse {
+        0% {
+            transform: scale(.85);
+        }
+    
+        70% {
+            transform: scale(1);
+    
+        }
+    
+        100% {
+            transform: scale(1);
+    
+        }
+    }
+    
+    .pulse__button:hover {
+        animation: pulse 2s;
+    }
+
+    .footer {
+        width: 768px;
+    }
+}
+
+/* Dispositivo mobile */
+
