--- a/css/style.css
+++ b/css/style.css
@@ -78,14 +78,14 @@ ul {
 
 /* Main Principal/Index */
 
-.main__grid {
-    display: grid;
-}
-
 .main__img {
     width: 100%;
     height: 500px;
     object-fit: cover;
+}
+
+.ofertas__grid {
+    width: 100%;
 }
 
 .categorias__main_grid {
@@ -93,6 +93,7 @@ ul {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 50%);
     padding: 2rem;
+    gap: 0px 25px;
     grid-template-areas:
         "hilos botones elasticos"
         "cintas lanas cierres"
@@ -107,6 +108,7 @@ ul {
     font-size: 25px;
     left: 20px;
     z-index: 2;
+    width: 50%;
 }
 
 .hilos {
@@ -125,7 +127,7 @@ ul {
 }
 
 .botones img {
-    width: 456px;
+    width: 100%;
     height: 50%;
     object-fit: cover;
 }
@@ -173,8 +175,9 @@ ul {
 
 .categorias__main_grid li {
     justify-self: center;
-    width: 450px;
+    width: 100%;
     height: 470px;
+    margin-bottom: -133px;
 }
 
 .categorias__main_grid a {
@@ -305,20 +308,19 @@ ul {
     }
 
     .menu {
-      flex-direction: column;
-      font-size: 17px;
-    } 
+        flex-direction: column;
+        font-size: 17px;
+    }
 
     .main__img {
         width: 768px;
         object-fit_: contain;
     }
 
-    .categorias__main_grid {
+    .ofertas__grid .categorias__main_grid {
         width: 768px;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: 1fr;
         grid-template-rows: repeat(1, 15%);
-        padding: 2rem;
         grid-template-areas:
             "hilos"
             "botones"
@@ -328,30 +330,8 @@ ul {
             "cierres";
     }
 
-    @keyframes pulse {
-        0% {
-            transform: scale(.85);
-        }
-    
-        70% {
-            transform: scale(1);
-    
-        }
-    
-        100% {
-            transform: scale(1);
-    
-        }
-    }
-    
-    .pulse__button:hover {
-        animation: pulse 2s;
-    }
-
-    .footer {
-        width: 768px;
-    }
 }
 
-/* Dispositivo mobile */
+@media (max-width: 425px) {}
 
+/* Dispositivo mobile */
