--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 /* Paleta de colores */
 
-/* 
+/*
 claret: #72002eff;
 thistle: #dabedcff;
 african-violet: #ab85c0ff;
 old-lavender: #70566dff;
-dark-purple: #38273bff; 
+dark-purple: #38273bff;
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
@@ -24,7 +24,7 @@ h1 {
     color: white;
     background-image: linear-gradient(#72002eff, white);
     height: 50px;
-    padding: 15px;
+    /* padding: 15px; */
     text-align: center;
 }
 
@@ -35,8 +35,8 @@ ul {
 /* Menu/Navegador */
 
 .header {
-    display: flex;
-    flex-direction: column;
+    display: flex !important;
+    flex-direction: column !important;
 }
 
 .img__logo {
@@ -44,13 +44,17 @@ ul {
     padding: 1rem;
 }
 
-.nav {
+.navbar--principal {
     background-color: #72002eff;
     margin-top: 8px;
 }
 
+.nav__mobile {
+    display: none;
+}
+
 .menu {
-    display: flex;
+    display: flex !important;
     font-size: 20px;
     justify-content: center
 }
@@ -305,6 +309,15 @@ ul {
         width: 100%;
     }
 
+    .nav__mobile {
+        display: block;
+        background-color: #72002eff;
+    }
+
+    .navbar--principal {
+        display: none;
+    }
+
     .menu {
         flex-direction: column;
         font-size: 17px;
@@ -355,6 +368,15 @@ ul {
     .a__header {
         display: flex;
         justify-content: center;
+    }
+
+    .nav__mobile {
+        display: block;
+        background-color: #72002eff;
+    }
+
+    .navbar--principal {
+        display: none;
     }
 
     .menu {
