--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,17 @@ ul {
     padding-bottom: 2rem;
 }
 
+/* Main Contacto */
+
+.row {
+    padding: 25px;
+}
+
+.btn-primary {
+    --bs-btn-bg: #72002eff;
+    --bs-btn-border-color: #72002eff;
+}
+
 /* Main Como Comprar */
 
 .comprar__explicación {
