--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,9 @@ ul {
 .menu {
     display: flex !important;
     font-size: 20px;
-    justify-content: center
+    justify-content: center;
+    margin-bottom: 0;
+    padding-left: 0;
 }
 
 .menu li {
@@ -195,17 +197,15 @@ ul {
 
 @keyframes pulse {
     0% {
-        transform: scale(.85);
+        transform: scale(1);
     }
 
     70% {
-        transform: scale(1);
-
+        transform: scale(1.10);
     }
 
     100% {
         transform: scale(1);
-
     }
 }
 
@@ -247,6 +247,27 @@ ul {
 .productos__grid h2 {
     padding-top: 2rem;
     padding-bottom: 2rem;
+}
+
+/* Main Nosotros */
+
+.accordion {
+    --bs-accordion-active-bg: #72002eff;
+    --bs-accordion-active-color: white;
+    --bs-accordion-btn-focus-border-color: white;
+    --bs-accordion-btn-focus-box-shadow: white;
+    --bs-accordion-btn-bg: rgb(245, 237, 244);
+}
+
+.col {
+    height: 300px;
+    margin: 25px;
+    padding: 0;
+}
+
+.col img {
+    height: 300px;
+    object-fit: cover;
 }
 
 /* Main Contacto */
@@ -396,6 +417,10 @@ ul {
 
     .productos__grid {
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .col img {
+        width: 100%;
     }
 
     .footer a {
